--- a/view/registr.html
+++ b/view/registr.html
@@ -28,9 +28,10 @@
         </div>
         <div>
             <p>Повторите ваш пароль</p>
-            <input type="password" name="con-password" placeholder="Это очень важно" />
+            <input type="password" name="conPassword" placeholder="Это очень важно" />
         </div>
         <input class="button__input" type="submit" name="button" value="Регистрация">
     </form>
+    <script type="module" src="../js/registr.js"></script>
 </body>
 </html>
