--- a/view/login.html
+++ b/view/login.html
@@ -12,14 +12,14 @@
         <h1>Вход</h1>
         <div>
             <p>Логин</p>
-            <input type="text" name="login" placeholder="Введите ваш логин" />
+            <input type="text" name="login" required placeholder="Введите ваш логин" />
         </div>
         <div>
             <p>Пароль</p>
-            <input type="password" name="password" placeholder="Введите ваш пароль"/>
+            <input type="password" name="password" required placeholder="Введите ваш пароль"/>
         </div>
         <input class="button__input" type="submit" name="button" value="Войти">
     </form>
-    <script src="../js/script.js"></script>
+    <script type="module" src="../js/login.js"></script>
 </body>
 </html>
