--- a/styles/auth.css
+++ b/styles/auth.css
@@ -32,17 +32,31 @@ input:hover {
     border-bottom: 1px solid rgb(75, 75, 75);
 }
 
-.button__input {
+.button__submit{
+    width: 100%;
     border: 0;
     background-color: rgb(73, 233, 67);
     margin-top: 30px;
+    height: 30px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.button__submit:hover {
+    background-color: rgb(70, 197, 65);
+}
+
+.button__redirect {
+    color: rgb(73, 233, 67);
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 form > div {
     position: relative;
 }
 
-.message_error {
+.message_error, .message_server {
     position: absolute;
     left: 0;
     display: block;
